refacto : add mapper for domains region, department and city